# Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/java/com/example/myapplication/gl/: NativeGLRenderer.kt
app/src/main/jni/: CMakeLists.txt  NativeGLRenderer.cpp  NativeProcessor.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
web app/: index.html  index.js  index.ts
